unpackaged/main/default/objects/Activity/fields/Activity_Date_z__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date_z__c</fullName>
    <formula>ActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Date Z</label>
    <type>Date</type>
</CustomField>