unpackaged/main/default/objects/Activity/fields/Call_Check__c.field-meta.xml
<CustomField>
    <fullName>Call_Check__c</fullName>
    <formula>if(Distinct_Call__c = "Manual OB",
  false,
   IF(Distinct_Call__c = "Manual IB",
     false,
      IF(Distinct_Call__c = "Manual Call",
        false,
         if(Distinct_Call__c = "CAS OB",
           TRUE,
            IF(and(Distinct_Call__c = "8x8 IB",CallDurationInSeconds &gt;=10),
              TRUE,
                IF(and(Distinct_Call__c = "8x8 OB",CallDurationInSeconds &gt;=10),
                  TRUE,
                    FALSE
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Check</label>
    <type>Checkbox</type>
</CustomField>