unpackaged/main/default/objects/Activity/fields/Call_Goal__c.field-meta.xml
<CustomField>
    <fullName>Call_Goal__c</fullName>
    <description>Temporary field to see if we want to track this. Delete or build a more permanent solution.</description>
    <formula>CASE(Owner:User.UserRole.Name,
 "SDR",1100,
 "BDR",880,
 "IMS",880,
 660
)</formula>
    <label>Call Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>