unpackaged/main/default/objects/Activity/fields/Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Call_Purpose__c</fullName>
    <description>Originally created to map to an Outreach field of the same name</description>
    <label>Call Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Introduction Call</fullName>
            </value>
            <value>
                <fullName>Quote Review</fullName>
            </value>
            <value>
                <fullName>Follow-up Call</fullName>
            </value>
            <value>
                <fullName>Demo Call</fullName>
            </value>
            <value>
                <fullName>Support Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>