unpackaged/main/default/objects/Activity/fields/CAS_Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>CAS_Call_Recording__c</fullName>
    <label>CAS Call Recording</label>
    <type>Url</type>
</CustomField>