unpackaged/main/default/objects/Activity/fields/CAS_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>CAS_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you would like this task to be on CAS Follow Up reports per this field's trigger.</inlineHelpText>
    <label>CAS Follow Up</label>
    <type>Checkbox</type>
</CustomField>