unpackaged/main/default/objects/Activity/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <formula>IsChild</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child</label>
    <type>Checkbox</type>
</CustomField>