unpackaged/main/default/objects/Activity/fields/Completed_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_2__c</fullName>
    <formula>CASE( Status ,  "Completed" ,   DATETIMEVALUE(LastModifiedDate), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>old Completed Date</label>
    <type>DateTime</type>
</CustomField>