unpackaged/main/default/objects/Activity/fields/Completed_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_3__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>