unpackaged/main/default/objects/Activity/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <inlineHelpText>Static field that calculates the Contact Status at time of NVM Call record creation.</inlineHelpText>
    <label>Contact Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>