unpackaged/main/default/objects/Activity/fields/Created_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Created_Weekday__c</fullName>
    <formula>WEEKDAY(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Weekday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>