unpackaged/main/default/objects/Activity/fields/Customer_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Customer_Meeting__c</fullName>
    <formula>not(isblank(Safe_Contact_ID__c))</formula>
    <label>Customer Meeting</label>
    <type>Checkbox</type>
</CustomField>