unpackaged/main/default/objects/Activity/fields/Distinct_Call__c.field-meta.xml
<CustomField>
    <fullName>Distinct_Call__c</fullName>
    <formula>if(ispickval(CallType,"Outbound")=TRUE,"8x8 OB",
 if(ispickval(CallType,"Inbound")=TRUE, "8x8 IB",
  if(ispickval(cas__Attempt_Type__c,"CASLightningConversation")=TRUE,"CAS OB",
   if(ispickval(Manual_Call_Type__c,"Inbound")=TRUE, "Manual IB",
    if(ispickval(Manual_Call_Type__c,"Outbound")=TRUE, "Manual OB",
     if(Subject="Call","Manual Call","")
    )
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distinct Call</label>
    <type>Text</type>
</CustomField>