unpackaged/main/default/objects/Activity/fields/Event_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Completed_Date__c</fullName>
    <description>Event process improvement - 6/10/2021</description>
    <inlineHelpText>Updates when the manual Event Status field is set to completed.</inlineHelpText>
    <label>Event Completed Date</label>
    <type>DateTime</type>
</CustomField>