unpackaged/main/default/objects/Activity/fields/Event_Length__c.field-meta.xml
<CustomField>
    <fullName>Event_Length__c</fullName>
    <inlineHelpText>The amount of time you actually spent with the client (rounded to nearest 15 minute interval)</inlineHelpText>
    <label>Event Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
            </value>
            <value>
                <fullName>45 Minutes</fullName>
            </value>
            <value>
                <fullName>60 Minutes</fullName>
            </value>
            <value>
                <fullName>75 Minutes</fullName>
            </value>
            <value>
                <fullName>90 Minutes</fullName>
            </value>
            <value>
                <fullName>&gt;90 Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>