unpackaged/main/default/objects/Activity/fields/Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>Event_Notes__c</fullName>
    <inlineHelpText>Short Description: 255 Character Limit</inlineHelpText>
    <label>Event Notes</label>
    <type>TextArea</type>
</CustomField>