unpackaged/main/default/objects/Activity/fields/Event_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Event_Purpose__c</fullName>
    <label>Event Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Overview</fullName>
            </value>
            <value>
                <fullName>Quote Tool Training</fullName>
            </value>
            <value>
                <fullName>Quote Review (&lt; $50K)</fullName>
            </value>
            <value>
                <fullName>Quote Review ($50K+)</fullName>
            </value>
            <value>
                <fullName>Contact Intro</fullName>
            </value>
            <value>
                <fullName>Punchout</fullName>
            </value>
            <value>
                <fullName>Financial Technology</fullName>
            </value>
            <value>
                <fullName>Injection Molding Capability Overview</fullName>
            </value>
            <value>
                <fullName>Customer Check-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>