unpackaged/main/default/objects/Activity/fields/External_Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Integration_Source__c</fullName>
    <description>This picklist is for Admins and Devs to use to keep track of what event is creating these tasks.</description>
    <label>External Integration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Quick Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>