unpackaged/main/default/objects/Activity/fields/Future_Dated_Event__c.field-meta.xml
<CustomField>
    <fullName>Future_Dated_Event__c</fullName>
    <formula>Activity_Date_z__c &gt;  DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Dated Event</label>
    <type>Checkbox</type>
</CustomField>