unpackaged/main/default/objects/Activity/fields/GNO_ActivityType__c.field-meta.xml
<CustomField>
    <fullName>GNO_ActivityType__c</fullName>
    <description>Mainly used for reporting on Coaching Activity.</description>
    <label>Activity Type (GNO Use Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>