unpackaged/main/default/objects/Activity/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <formula>WhoId = null
&amp;&amp;
WhatId = null</formula>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>