unpackaged/main/default/objects/Activity/fields/Manual_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Manual_Call_Type__c</fullName>
    <label>Manual Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>