unpackaged/main/default/objects/Activity/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <label>Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>