unpackaged/main/default/objects/Activity/fields/NVMContactWorld_DispositionCodeField__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld_DispositionCodeField__c</fullName>
    <label>DispositionCodeField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>