unpackaged/main/default/objects/Activity/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <formula>text(Owner:User.Office_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Location</label>
    <type>Text</type>
</CustomField>