unpackaged/main/default/objects/Activity/fields/Reassign_Task__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign Task</label>
    <type>Checkbox</type>
</CustomField>