unpackaged/main/default/objects/Activity/fields/Safe_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Activity_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Activity ID</label>
    <type>Text</type>
</CustomField>