unpackaged/main/default/objects/Activity/fields/Safe_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Contact_ID__c</fullName>
    <formula>CASESAFEID(WhoId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Contact / Lead ID</label>
    <type>Text</type>
</CustomField>