unpackaged/main/default/objects/Activity/fields/Schedule_Delta__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Delta__c</fullName>
    <formula>Activity_Date_z__c - datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>