unpackaged/main/default/objects/Activity/fields/SDR_Ghost__c.field-meta.xml
<CustomField>
    <fullName>SDR_Ghost__c</fullName>
    <formula>IsTask = FALSE &amp;&amp;
!ISBLANK(WhoId) &amp;&amp;
CreatedBy.UserRole.Name = 'SDR' &amp;&amp;
((LastModifiedDate - CreatedDate) &lt; (15/1440))</formula>
    <label>SDR Ghost</label>
    <type>Checkbox</type>
</CustomField>