unpackaged/main/default/objects/Activity/fields/Survey_Generated__c.field-meta.xml
<CustomField>
    <fullName>Survey_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Generated</label>
    <type>Checkbox</type>
</CustomField>