unpackaged/main/default/objects/Activity/fields/Task_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Task_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Rescheduled</label>
    <type>Checkbox</type>
</CustomField>