unpackaged/main/default/objects/Activity/fields/transactionid__c.field-meta.xml
<CustomField>
    <fullName>transactionid__c</fullName>
    <label>Transaction ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>