unpackaged/main/default/objects/Activity/fields/User_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Active?</label>
    <type>Checkbox</type>
</CustomField>