unpackaged/main/default/objects/Activity/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <inlineHelpText>Static field that shows the User's Role at time of Activity creation.</inlineHelpText>
    <label>User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>